--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -144,9 +144,9 @@ jobs:
       - name: Checkout repo branch
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
-          repository: keiyoushi/extensions
+          repository: lencras/extensions-source
           token: ${{ secrets.BOT_PAT }}
-          ref: repo
+          ref: main
           path: repo
           persist-credentials: true
 
